[tool.poetry]
name = "when-cli"
version = "1.0"
description = "When CLI is a timezone conversion tool. It takes as input a natural time string, can also be a time range, and converts it into different timezone(s) at specific location(s)."
authors = ["Christian Assing <chris@ca-net.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^12.2.0"
rich-click = "^1.3.0"
typer = "^0.4.1"
arrow = "^1.2.2"
python-dateutil = "^2.8.2"
tzdata = "^2022.1"
pydantic = "^1.9.0"
airportsdata = "^20220406"
tzlocal = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pyinstaller = "^4.10"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
