[tool.poetry]
name = "when-cli"
version = "1.1.2"
description = "When CLI is a timezone conversion tool. It takes as input a natural time string, can also be a time range, and converts it into different timezone(s) at specific location(s)."
authors = ["Christian Assing <chris@ca-net.org>"]
license = "MIT"
packages = [{ include = "when" }]
readme = "README.md"
documentation = "https://github.com/chassing/when-cli"
homepage = "https://github.com/chassing/when-cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "^12.2.0"
rich-click = "^1.3.0"
typer = "^0.4.1"
arrow = "^1.2.2"
python-dateutil = "^2.8.2"
tzdata = "^2022.1"
pydantic = "^1.9.0"
airportsdata = "^20220406"
tzlocal = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pyinstaller = "^4.10"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chassing/when-cli/issues"

[tool.poetry.scripts]
when-cli = 'when.__main__:run'

[tool.black]
target-version = ['py310']
skip-string-normalization = false
line-length = 120

[tool.pyright]
reportMissingTypeStubs = true
